styles: correct nav link spacing lhs

--- a/client/src/app/modules/common/navbar/navbar.component.css
+++ b/client/src/app/modules/common/navbar/navbar.component.css
@@ -1,9 +1,11 @@
 nav {
   background-color: #455a64;
+  padding: 0 !important;
 }
 
 .nav-link {
   color: white !important;
+  /* margin: 12px 0 4px !important; */
 }
 
 .nav-link-active {
